--- a/menu/main.css
+++ b/menu/main.css
@@ -72,7 +72,7 @@ h2 {
   text-transform: uppercase;
 }
 p{
-  font-family: Helvetica;
+  font-family: Roboto;
   font-size: 1.4em;
   font-weight: 100;
   text-align: justify;
