--- a/menu/main.css
+++ b/menu/main.css
@@ -9,8 +9,8 @@ body, html {
   color: white;
 }
 h1{
-  font-family: Helvetica, sans-serif;
-  font-weight: 100;
+  font-family: Raleway, sans-serif;
+  font-weight: 200;
 }
 
 .menu-container {
@@ -19,7 +19,7 @@ h1{
   top: 0;
   left: 0;
   width: 100%;
-  height: 120px;
+  height: 100px;
 }
 .menu-list {
   width: 80%;
@@ -51,8 +51,10 @@ h1{
   color: white;
   border-bottom: 1px solid lightgrey;
 }
-nav>ul>li {
+nav>ul>li.menu-item{
   margin: 0 auto;
+  font-family: Raleway, sans-serif;
+  font-weight: 100;
 }
 .container {
   margin: 120px 15% 0px 15%;
@@ -77,6 +79,8 @@ p{
   font-weight: 100;
   text-align: justify;
   line-height: 1.8em;
+  padding-bottom: 1em;
+  margin-bottom: 0;
 }
 a:link {
   color: white;
@@ -93,4 +97,82 @@ a:active {
   /*solves the problem of fixed nav of 120px height*/
   padding-top: 120px;
   margin-top: -120px;
+}
+
+
+/*hover fancy effect*/
+
+@-webkit-keyframes swing
+{
+    15%
+    {
+        -webkit-transform: translateX(5px);
+        transform: translateX(5px);
+    }
+    30%
+    {
+        -webkit-transform: translateX(-5px);
+       transform: translateX(-5px);
+    }
+    50%
+    {
+        -webkit-transform: translateX(3px);
+        transform: translateX(3px);
+    }
+    65%
+    {
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+    }
+    80%
+    {
+        -webkit-transform: translateX(2px);
+        transform: translateX(2px);
+    }
+    100%
+    {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+@keyframes swing
+{
+    15%
+    {
+        -webkit-transform: translateX(5px);
+        transform: translateX(5px);
+    }
+    30%
+    {
+        -webkit-transform: translateX(-5px);
+        transform: translateX(-5px);
+    }
+    50%
+    {
+        -webkit-transform: translateX(3px);
+        transform: translateX(3px);
+    }
+    65%
+    {
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+    }
+    80%
+    {
+        -webkit-transform: translateX(2px);
+        transform: translateX(2px);
+    }
+    100%
+    {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+
+.swing:hover
+{
+        -webkit-animation: swing 1s ease;
+        animation: swing 1s ease;
+        -webkit-animation-iteration-count: 1;
+        animation-iteration-count: 1;
 }
